--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ img {
   position: absolute;
   top: 16px;
   right: 16px;
-  z-index: -1;
+  /* z-index: -1; */
   background-color: white;
 }
 
